content/docs/2.3.1/getting-started.adoc
= Getting Started
Jonathan Bullock
2014-07-10
:jbake-type: page
:jbake-tags: documentation
:jbake-status: published
:idprefix:

== Getting Started

=== Installation

. Make sure you have a http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java 6+ JRE] and that the `java` command is available in your path
. link:/download.html[Download] and unzip JBake into a folder on your hard disk, this folder will be known as `JBAKE_HOME`
. Add a entry for `JBAKE_HOME/bin` to your path environment variable
. Open a command prompt and run `jbake -h` (or `jbake.bat -h` if you are on Windows) to confirm everything works, you should see usage help text

----
JBake v2.3.1-SNAPSHOT (2014-07-10 19:20) [http://jbake.org]

Usage: jbake ...
----

=== Usage

* Run `jbake` to do some baking, this will use the current folder as the source and place any baked output into an `output` folder in the current folder
* Or you can run `jbake <source_folder> <destination_folder>` if you want full control over the source & destination folders

=== Quick Start

To get up and running quickly with JBake you can use its example project structure as a starting point for your site.

----
$ mkdir project
$ cd project
$ jbake -i
----

The `-i` option initialises the current folder with the necessary folder structure along with a default set of Freemarker templates 
to get you started. You can also get a set of http://www.groovy-lang.org/[Groovy] or http://www.thymeleaf.org/[Thymeleaf] based 
templates by supplying an extra parameter:

----
$ jbake -i groovy
$ jbake -i thymeleaf
----

Once you have added some real content to your site and customised the templates you can bake your site by running the following commands:

----
$ cd project
$ jbake
----

This will place your baked site in the `output` folder by default. You can then see what it looks like 
immediately by running JBake in server mode:

----
$ cd project
$ jbake -s
JBake v2.3.1-SNAPSHOT (2014-07-10 19:20) [http://jbake.org]

Serving out contents of: [output] on http://localhost:8820/
(To stop server hit CTRL-C)
----

You can then preview your site in your browser at http://localhost:8820. You can configure what port the server 
runs via your link:#configuration[configuration file].

You can also specify the folder to serve out along with the `-s` option like so:

----
$ jbake -s /home/user/site/output/
JBake v2.3.1-SNAPSHOT (2014-07-10 19:20) [http://jbake.org]

Serving out contents of: [/home/user/site/output/] on http://localhost:8820/
(To stop server hit CTRL-C)
----

That's all there is to it, to getting your own baked site! 

=== Example Project Structures

The example project structure and sample templates are stored in your JBake installation folder in the files:

* `example_project_freemarker.zip`
* `example_project_groovy.zip` 
* `example_project_thymeleaf.zip`

If you'd like to change the structure or sample templates in some way then you can extract the contents of these files, update 
as required, then ZIP them back up and replace the original files with your updated files. Then JBake will use your updated 
project structure and templates when ever it initialises a new folder from then on. 